Updated text before coauthors review

--- a/text/cuminf_bib.bib
+++ b/text/cuminf_bib.bib
@@ -117,6 +117,21 @@
 	file = {Thurfjell et al. - 2014 - Applications of step-selection functions in ecolog.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\L6W492HU\\Thurfjell et al. - 2014 - Applications of step-selection functions in ecolog.pdf:application/pdf},
 }
 
+@book{burnham_model_2002,
+	address = {New York},
+	edition = {2nd ed},
+	title = {Model selection and multimodel inference: a practical information-theoretic approach},
+	isbn = {978-0-387-95364-9},
+	shorttitle = {Model selection and multimodel inference},
+	language = {en},
+	publisher = {Springer},
+	author = {Burnham, Kenneth P. and Anderson, David Raymond and Burnham, Kenneth P.},
+	year = {2002},
+	note = {OCLC: ocm48557578},
+	keywords = {Biology, Mathematical models, Mathematical statistics},
+	file = {Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\RHKMRKJW\\Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:application/pdf;Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\YKFU3WSZ\\Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:application/pdf},
+}
+
 @article{fieberg_how_2021,
 	title = {A ‘{How} to’ guide for interpreting parameters in habitat‐selection analyses},
 	volume = {90},
@@ -238,7 +253,7 @@
 
 @book{gillingham_integration_2016,
 	address = {Cham},
-	title = {The {Integration} {Imperative}},
+	title = {The {Integration} {Imperative}: cumulative environmental, community and health effects of multiple natural resource developments},
 	isbn = {978-3-319-22122-9 978-3-319-22123-6},
 	url = {http://link.springer.com/10.1007/978-3-319-22123-6},
 	language = {en},
@@ -304,12 +319,15 @@
 }
 
 @book{krausman_cumulative_2011,
+	address = {Boca Raton},
+	edition = {1},
 	title = {Cumulative effects in wildlife management: impact mitigation},
 	volume = {49},
 	shorttitle = {Cumulative effects in wildlife management},
 	url = {http://choicereviews.org/review/10.5860/CHOICE.49-5670},
 	language = {en},
 	urldate = {2022-01-07},
+	publisher = {CRC Press},
 	editor = {Krausman, Paul R. and Harris, Lisa K.},
 	year = {2011},
 	file = {2012 - Cumulative effects in wildlife management impact .pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\GZ4BFBTH\\2012 - Cumulative effects in wildlife management impact .pdf:application/pdf},
@@ -405,7 +423,7 @@
 	month = jul,
 	year = {2015},
 	pages = {659--669},
-	file = {Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\LNW55HS7\\Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:application/pdf},
+	file = {Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\LNW55HS7\\Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:application/pdf;Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\6PZ4CXW9\\Panzacchi et al. - 2015 - Searching for the fundamental niche using individu.pdf:application/pdf},
 }
 
 @article{skarin_out_2018,
@@ -423,7 +441,7 @@
 	month = oct,
 	year = {2018},
 	pages = {9906--9919},
-	file = {Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\8B2H6SSW\\Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:application/pdf},
+	file = {Skarin_2018_Ecol_Evol_WF_reindeer_Mala.docx:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\AQ7NAPK4\\Skarin_2018_Ecol_Evol_WF_reindeer_Mala.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document;Skarin_etal_2018_Ecol_Evol_supmat.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\Q2IXYHK2\\Skarin_etal_2018_Ecol_Evol_supmat.pdf:application/pdf;Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\8B2H6SSW\\Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:application/pdf},
 }
 
 @article{sloan_remaining_2014,
@@ -874,12 +892,12 @@ Conclusions The study of the spatial scale at which landscape variables inﬂuen
 	file = {Huais - 2018 - multifit an R function for multi-scale analysis i.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\TMQ4NFKM\\Huais - 2018 - multifit an R function for multi-scale analysis i.pdf:application/pdf},
 }
 
-@book{terry_m_therneau_modeling_2000,
+@book{therneau_modeling_2000,
 	address = {New York},
 	title = {Modeling {Survival} {Data}: {Extending} the {Cox} {Model}},
 	isbn = {0-387-98784-3},
 	publisher = {Springer},
-	author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
+	author = {Therneau, Terry M. and Grambsch, Patricia M.},
 	year = {2000},
 }
 
@@ -905,4 +923,106 @@ Conclusions The study of the spatial scale at which landscape variables inﬂuen
 	month = jan,
 	year = {2019},
 	file = {Lai et al. - 2019 - Evaluating the popularity of R in ecology.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\468TCNGV\\Lai et al. - 2019 - Evaluating the popularity of R in ecology.pdf:application/pdf},
+}
+
+@incollection{harris_grappling_2011,
+	address = {Boca Raton},
+	edition = {1},
+	title = {Grappling with cumulative effects},
+	language = {en},
+	booktitle = {Cumulative effects in wildlife management: impact mitigation},
+	publisher = {CRC Press},
+	author = {Harris, Lisa K. and Urreiztieta, Lirain F.},
+	editor = {Krausman, Paul R. and Harris, Lisa K.},
+	year = {2011},
+	pages = {3--16},
+}
+
+@article{quinonezpinon_design_2007,
+	title = {Design of an environmental monitoring program using {NDVI} and cumulative effects assessment},
+	volume = {28},
+	issn = {0143-1161, 1366-5901},
+	url = {https://www.tandfonline.com/doi/full/10.1080/01431160600887730},
+	doi = {10.1080/01431160600887730},
+	language = {en},
+	number = {7},
+	urldate = {2022-01-31},
+	journal = {International Journal of Remote Sensing},
+	author = {Quiñonez‐Piñón, R. and Mendoza‐Durán, A. and Valeo, C.},
+	month = apr,
+	year = {2007},
+	pages = {1643--1664},
+	file = {Quiñonez‐Piñón et al. - 2007 - Design of an environmental monitoring program usin.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\FGJFSW49\\Quiñonez‐Piñón et al. - 2007 - Design of an environmental monitoring program usin.pdf:application/pdf},
+}
+
+@incollection{johnson_regulating_2011,
+	address = {Boca Raton},
+	edition = {1},
+	title = {Regulating and planning for cumulative effects: the {Canadian} experience},
+	language = {en},
+	booktitle = {Cumulative effects in wildlife management: impact mitigation},
+	publisher = {CRC Press},
+	author = {Johnson, Chris J.},
+	editor = {Krausman, Paul R. and Harris, Lisa K.},
+	year = {2011},
+	pages = {29--46},
+}
+
+@article{laforge_process-focussed_2015,
+	title = {Process-focussed, multi-grain resource selection functions},
+	volume = {305},
+	issn = {03043800},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304380015000964},
+	doi = {10.1016/j.ecolmodel.2015.03.003},
+	language = {en},
+	urldate = {2022-02-10},
+	journal = {Ecological Modelling},
+	author = {Laforge, Michel P. and Vander Wal, Eric and Brook, Ryan K. and Bayne, Erin M. and McLoughlin, Philip D.},
+	month = jun,
+	year = {2015},
+	pages = {10--21},
+	file = {Laforge et al. - 2015 - Process-focussed, multi-grain resource selection f.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\2CQRG3JS\\Laforge et al. - 2015 - Process-focussed, multi-grain resource selection f.pdf:application/pdf},
+}
+
+@article{evans_physiologic_2013,
+	title = {Physiologic evaluation of medetomidine-ketamine anesthesia in free-ranging {Svalbard} (\textit{{Rangifer} tarandus platyrhynchus}) and wild {Norwegian} {Reindeer} (\textit{{Rangifer} tarandus tarandus})},
+	volume = {49},
+	issn = {0090-3558},
+	url = {http://www.bioone.org/doi/10.7589/2013-03-049},
+	doi = {10.7589/2013-03-049},
+	abstract = {Previously published studies indicated that combinations of medetomidine and ketamine were effective for both Svalbard (Rangifer tarandus platyrhynchus) and wild Norwegian reindeer (Rangifer tarandus tarandus). Both previous studies indicated that reindeer were hypoxemic on the basis of pulse oximetry. We conducted a physiologic evaluation of these two protocols using arterial blood gases. Medetomidine (10 mg) and ketamine (200 mg) were administered by dart from the ground in Svalbard reindeer (October 2010) and from a helicopter for wild reindeer (March 2012). Of tested animals, all seven wild reindeer and five of seven Svalbard reindeer were hypoxemic before oxygen administration. Nasal oxygen insufflation (1 L/min for five Svalbard reindeer and one wild reindeer and 2 L/min for four wild reindeer) corrected hypoxemia in all cases evaluated. For reversal, all animals received 5 mg atipamezole per mg medetomidine intramuscularly.},
+	language = {en},
+	number = {4},
+	urldate = {2022-03-14},
+	journal = {Journal of Wildlife Diseases},
+	author = {Evans, Alina L. and Lian, Marianne and das Neves, Carlos G. and Os, Øystein and Andersen, Roy and Aanes, Ronny and Strand, Olav and Tryland, Morten and Arnemo, Jon M.},
+	month = oct,
+	year = {2013},
+	pages = {1037--1041},
+	file = {Evans et al. - 2013 - Physiologic Evaluation of Medetomidine-Ketamine An.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\FF8BWAUK\\Evans et al. - 2013 - Physiologic Evaluation of Medetomidine-Ketamine An.pdf:application/pdf},
+}
+
+@techreport{johansen_vegetasjonskart_2009,
+	title = {Vegetasjonskart for {Norge} basert på {LANDSAT} {TM}/{ETM}+ data.},
+	language = {no},
+	number = {4},
+	institution = {Northern Research Institute, NORUT},
+	author = {Johansen, Bernt E.},
+	year = {2009},
+	pages = {87},
+	file = {Johansen - VEGETASJONSKART FOR NORGE BASERT PÅ LANDSAT TMETM.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\MDKJ9I52\\Johansen - VEGETASJONSKART FOR NORGE BASERT PÅ LANDSAT TMETM.pdf:application/pdf},
+}
+
+@book{kutner_applied_2005,
+	address = {Boston},
+	edition = {5th ed},
+	series = {The {McGraw}-{Hill}/{Irwin} series operations and decision sciences},
+	title = {Applied linear statistical models},
+	isbn = {978-0-07-238688-2},
+	language = {en},
+	publisher = {McGraw-Hill Irwin},
+	editor = {Kutner, Michael H.},
+	year = {2005},
+	keywords = {Analysis of variance, Experimental design, Linear models (Statistics), Regression analysis, Textbooks},
+	file = {Kutner - 2005 - Applied linear statistical models.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\HBP8UF3M\\Kutner - 2005 - Applied linear statistical models.pdf:application/pdf},
 }
